test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/ablation_o3_r50/mutants/6/result.txt
./test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/ablation_o3_r50/mutants/6/Solution.java:29: error: unreachable statement
        while (k > 0) {
        ^
1 error
